Fixed the margins of guest speakers on mobile

--- a/ext/wrc.css
+++ b/ext/wrc.css
@@ -152,6 +152,7 @@ section {
 
 #wrc-welcome p {
   text-align: left;
+  margin: auto;
 }
 
 #wrc-welcome img {
